# maf-onedrive-integration

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: setup-app-registration.sh
src/maf_onedrive_integration/: __init__.py  app.py  example_app.py
src/maf_onedrive_integration/onedrive/: client.py  models.py  sample_download.py
src/maf_onedrive_integration/static/: index.html
src/maf_onedrive_integration/summarization_task/: task.py
src/maf_onedrive_integration/summary_agent/: agent.py
tests/: test_app.py  test_onedrive_client.py  test_summarization_task.py  test_summary_agent.py
