[project]
name = "maf-onedrive-integration"
version = "0.1.0"
description = "MAF OneDrive Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgraph-sdk>=1.0,<2",
    "azure-identity>=1.15,<2",
    "azure-core>=1.30,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "ty>=0.0.1a6",
    "pre-commit>=4,<5",
]

[project.scripts]
maf-onedrive-integration = "maf_onedrive_integration.example_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# ty (type checker)
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.12"
